<resources>
    <string name="app_name">Docker2go</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="connection_test_successful">Test successful</string>
    <string name="connection_test_unsuccessful">Test failed</string>
    <string name="hostname_or_ip">Hostname or IP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="store_password">Store password</string>
    <string name="save_connection">Save</string>
    <string name="test_connection">Test</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="info_system">System</string>
    <string name="info_os">Operating system</string>
    <string name="info_server_version">Server version</string>
    <string name="info_memory">Memory</string>
    <string name="info_running">running</string>
    <string name="info_paused">paused</string>
    <string name="info_stopped">stopped</string>
    <string name="info_num_cpus">Processors</string>
    <string name="info_swarm" translatable="false">Swarm mode</string>
    <string name="info_swarm_status" translatable="false">Status</string>
    <string name="info_swarm_nodeid" translatable="false">Node ID</string>
    <string name="info_control_avail">Node type</string>
    <string name="info_swarm_nodeaddr">Node Address</string>
    <string name="info_swarm_worker" translatable="false">Woker</string>
    <string name="info_swarm_master" translatable="false">Master</string>
    <string name="info_isactive" translatable="false">active</string>
    <string name="title_activity_container_detail">Loading details..</string>
    <string name="connect">Connect</string>
    <string name="edit">Edit</string>
    <string name="connection_description">You were already %d times connected to this destination using port %d</string>
    <string name="connection_unkown_os">Unknown operating system</string>
    <string name="dialog_hk_message">Remote SSH key fingerprint not in cache.\nKey fingerprint (%s) found on remote server: %s \nDo you trust this host and want to proceed?</string>
    <string name="dialog_hk_title">Security Information</string>
    <string name="date_type_past_wrapper">%s ago</string>
    <string name="no_connections">There are no connections yet.</string>
    <string name="restart_dockerd">Restart Docker Daemon</string>
    <string name="prune_containers">Prune Containers</string>
    <string name="prune_images">Prune Images</string>
    <string name="pull_image">Pull Image</string>
    <string name="image_name">Image name</string>
    <string name="pull_image_info">Enter the full Image name below</string>
</resources>
